fix styles for navbar-collapse on mobile

--- a/web/bundles/app/css/index.css
+++ b/web/bundles/app/css/index.css
@@ -36,15 +36,12 @@ body {
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: transparent;
     border: 0;
+    text-align: right;
 }
 
 .navbar-brand>img {
     max-width: 100%;
     height: 50px;
-}
-
-.content {
-    margin-top: 7rem;
 }
 
 .btn-default {
